<resources>
    <string name="app_name">Loan Calculator</string>
    <string name="car_price">Car Price</string>
    <string name="down_payment">Down Payment</string>
    <string name="loan_period">Loan Period (year)</string>
    <string name="interest_rate">Interest Rate (%)</string>
    <string name="car_loan">Loan</string>
    <string name="interest">Interest</string>
    <string name="monthly_repayment">Monthly Repayment</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
</resources>
